<resources>
    <string name="app_name">UTSPraktik-IF10-10120909-Vincentius Mickey Satya Wisesa</string>
    <string name="Pelaksanaan_PPDB">Pelaksanaan PPDB Tahap 1 - 2023</string>
    <string name="Detail">Detail</string>
    <string name="Persiapan">Persiapan</string>
    <string name="Deskripsi_TanggalPersiapan">17 Mei - 05 Juni 2023</string>
    <string name="title_bold_Pengumuman_Hasil_Seleksi">Pengumuman Hasil Seleksi</string>
    <string name="anda_dinyatakan_diterima_di">Anda dinyatakan diterima di</string>
    <string name="SMA_Negeri_1_Bojonggede">SMA Negeri 1 Bojonggede</string>
    <string name="Jalur_Prestasi_Kejuaraan">Jalur Prestasi Kejuaraan</string>
    <string name="Layanan_PPDB">Layanan PPDB</string>
    <string name="Bandung">Kota Bandung</string>
    <string name="Info_Sekolah_PPDB">Info Sekolah PPDB</string>
    <string name="Sosialisasi_PPDB">Sosialisasi PPDB</string>
    <string name="Pendaftaran_PPDB_Tahap_1">Pendaftaran PPDB Tahap 1</string>
    <string name="Pengumuman_PPDB_Tahap_1">Pengumuman PPDB Tahap 1</string>
    <string name="Hotline">Hotline</string>
    <string name="Berita_Terkait_PPDB">Berita Terkait PPDB</string>
    <string name="Informasi_Terbaru_dan_terpopuler_terkait_PPDB">Dapatkan semua informasi terbaru dan terpopuler terkait
PPDB</string>
    <string name="Terbaru">Terbaru</string>
    <string name="Terpopuler">Terpopuler</string>
</resources>
