<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/toa"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="923dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="13dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/frame_2"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="844dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="13dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/frame_2"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="779dp" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="13dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/frame_2"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="715dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="13dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/frame_2"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="654dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="631dp"
        android:layout_height="397dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteX="-110dp"
        tools:layout_editor_absoluteY="-93dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="18dp"
        android:text="@string/Pelaksanaan_PPDB"
        android:textColor="#424242"
        android:textsize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="213dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="41dp"
        android:layout_height="18dp"
        android:text="@string/Detail"
        android:textColorHighlight="@color/green"
        android:textColorLink="@color/green"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="212dp" />

    <View
        android:layout_width="280dp"
        android:layout_height="3dp"
        android:background="#16A75C"
        android:visibility="visible"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="252dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="15dp"
        android:layout_height="19dp"
        app:srcCompat="@drawable/vector"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="212dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:text="@string/Persiapan"
        android:textColor="#FF000000"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="284dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="16dp"
        android:layout_height="15dp"
        app:srcCompat="@drawable/ellipse_131"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="252dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Deskripsi_TanggalPersiapan"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="304dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/people"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="286dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="286dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/toa"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="354dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bold_Pengumuman_Hasil_Seleksi"
        android:textColor="#212121"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="385dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anda_dinyatakan_diterima_di"
        android:textColor="#069550"
        android:textSize="12sp"
    tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="420dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMA_Negeri_1_Bojonggede"
        android:textColor="#424242"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jalur_Prestasi_Kejuaraan"
        android:textColor="#616161"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="460dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_park_outline_degree_hat"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="493dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Layanan_PPDB"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#212121"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="527dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/frame_811"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="549dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bandung"
        android:textColor="#16A75C"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="548dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/frame_12"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="584dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/frame_12__1_"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="654dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/frame_12__2_"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="715dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/frame_12__3_"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="779dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/frame_12__4_"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="844dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detail_card"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="414dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Info_Sekolah_PPDB"
        android:textColor="#212121"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="588dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="13dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/frame_2"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="588dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sosialisasi_PPDB"
        android:textColor="#212121"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="654dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pendaftaran_PPDB_Tahap_1"
        android:textColor="#212121"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="715dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pengumuman_PPDB_Tahap_1"
        android:textColor="#212121"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="779dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hotline"
        android:textColor="#212121"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="844dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Berita_Terkait_PPDB"
        android:textColor="#212121"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="972dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Informasi_Terbaru_dan_terpopuler_terkait_PPDB"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="994dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terbaru"
        android:textColor="#16A75C"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="1045dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terpopuler"
        android:textColor="#757575"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="1046dp" />

</android.support.constraint.ConstraintLayout>